--- a/Lucuber/Base.lproj/Feed.storyboard
+++ b/Lucuber/Base.lproj/Feed.storyboard
@@ -29,7 +29,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OFL-Bc-Ig8">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="Cq1-wD-nSm" id="FY8-nt-YI5"/>
@@ -37,15 +37,15 @@
                                 </connections>
                             </tableView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="dpy-Fs-5VI">
-                                <rect key="frame" x="178" y="184" width="20" height="20"/>
+                                <rect key="frame" x="178" y="140" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="dpy-Fs-5VI" firstAttribute="top" secondItem="kpV-K9-eTe" secondAttribute="bottom" constant="120" id="4ce-R3-KZd"/>
+                            <constraint firstItem="OFL-Bc-Ig8" firstAttribute="top" secondItem="kpV-K9-eTe" secondAttribute="bottom" id="77F-oh-5SO"/>
+                            <constraint firstItem="gi0-eJ-qWW" firstAttribute="top" secondItem="OFL-Bc-Ig8" secondAttribute="bottom" id="Eir-Xo-Gfa"/>
                             <constraint firstItem="dpy-Fs-5VI" firstAttribute="centerX" secondItem="doc-Hx-WLM" secondAttribute="centerX" id="JFg-MK-Dld"/>
-                            <constraint firstAttribute="bottom" secondItem="OFL-Bc-Ig8" secondAttribute="bottom" id="SL4-4X-UPu"/>
-                            <constraint firstItem="OFL-Bc-Ig8" firstAttribute="top" secondItem="doc-Hx-WLM" secondAttribute="top" id="ejE-N9-Pfg"/>
                             <constraint firstItem="OFL-Bc-Ig8" firstAttribute="leading" secondItem="doc-Hx-WLM" secondAttribute="leading" id="oB5-qM-6mN"/>
                             <constraint firstAttribute="trailing" secondItem="OFL-Bc-Ig8" secondAttribute="trailing" id="qcg-aO-4a8"/>
                         </constraints>
@@ -57,7 +57,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="loadingFeedsIndicator" destination="dpy-Fs-5VI" id="HOE-6v-MWC"/>
                         <outlet property="tableView" destination="OFL-Bc-Ig8" id="gpS-ln-rWL"/>
@@ -69,7 +69,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Epp-Ol-UN7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="230" y="1290"/>
+            <point key="canvasLocation" x="229.59999999999999" y="1289.5052473763119"/>
         </scene>
         <!--Feeds Container View Controller-->
         <scene sceneID="dvK-vp-zd7">
@@ -163,7 +163,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UX5-TC-S8Y">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="SEZ-0k-lY8" id="YEX-JQ-img"/>
@@ -182,9 +182,9 @@
                             <constraint firstItem="UX5-TC-S8Y" firstAttribute="leading" secondItem="0vS-MW-XpE" secondAttribute="leading" id="4xo-EQ-7qU"/>
                             <constraint firstItem="7lL-VY-CJq" firstAttribute="centerX" secondItem="0vS-MW-XpE" secondAttribute="centerX" id="8u2-7o-0PW"/>
                             <constraint firstAttribute="trailing" secondItem="UX5-TC-S8Y" secondAttribute="trailing" id="OVT-C2-hd3"/>
-                            <constraint firstAttribute="bottom" secondItem="UX5-TC-S8Y" secondAttribute="bottom" id="ZVI-WU-jIe"/>
+                            <constraint firstItem="1s8-E3-pLR" firstAttribute="top" secondItem="UX5-TC-S8Y" secondAttribute="bottom" id="clL-jv-ayR"/>
                             <constraint firstItem="7lL-VY-CJq" firstAttribute="top" secondItem="ivi-eJ-kSt" secondAttribute="bottom" constant="60" id="ty1-Pd-3x8"/>
-                            <constraint firstItem="UX5-TC-S8Y" firstAttribute="top" secondItem="0vS-MW-XpE" secondAttribute="top" id="yuM-8y-obA"/>
+                            <constraint firstItem="UX5-TC-S8Y" firstAttribute="top" secondItem="ivi-eJ-kSt" secondAttribute="bottom" id="zO2-W1-lLp"/>
                         </constraints>
                     </view>
                     <connections>
@@ -195,7 +195,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C5e-cM-De7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-770" y="1290"/>
+            <point key="canvasLocation" x="-770.39999999999998" y="1289.5052473763119"/>
         </scene>
         <!--SearchFeedsViewController-->
         <scene sceneID="PqF-Ch-q7C">
@@ -236,7 +236,7 @@
                     <tabBarItem key="tabBarItem" title="" image="icon_feeds" selectedImage="icon_feeds_active" id="Fk4-Fw-IlC"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="if5-gT-npF">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="if5-gT-npF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
