--- a/Lucuber/Views/Cell/SubscribeFeedCell/SubscribeFeedCell.xib
+++ b/Lucuber/Views/Cell/SubscribeFeedCell/SubscribeFeedCell.xib
@@ -23,8 +23,8 @@
                         <color key="textColor" red="0.24954603610000001" green="0.24954603610000001" blue="0.24954603610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Do not go gentle into that good night. Old age should burn and rage at close of day." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s9S-zI-iIy">
-                        <rect key="frame" x="85" y="32" width="191" height="31.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="洒洒安师大安师大" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s9S-zI-iIy">
+                        <rect key="frame" x="85" y="32" width="191" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="Csh-eB-fOC"/>
                         </constraints>
